Fix cartoon section vertical alignment and footer link grids

--- a/styles.css
+++ b/styles.css
@@ -296,8 +296,8 @@ border-bottom: 1px solid var(--border-color);
 
 .cartoon {
   display: grid;
-  grid-template-columns: repeat(5, 1fr);
-  grid-template-rows: 1fr min-content 1fr 1fr 1fr;
+  grid-template-columns: repeat(1, 1fr);
+  grid-template-rows: repeat(3, max-content);
 }
 .cartoon > div {
   grid-row: span 1;
@@ -312,8 +312,33 @@ border-bottom: 1px solid var(--border-color);
   justify-content: center;
   align-items: center;
 }
+
+
+.cartoon-text {
+
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  height: 100%;
+  width: 100%;
+}
+
+.cartoon>.social-links-container>ul>li:nth-child(3) {
+
+border-right: 1px solid var(--border-color);
+
+}
+
+.cartoon-text>.social-links-container>ul {
+  height: min-content;
+  margin: 0;
+}
+
+
+
 .comic-container img {
-  max-width: 100%;
+  max-height: 315px;
 }
 
 .title-flex-container{
@@ -349,7 +374,7 @@ border-bottom: 1px solid var(--border-color);
   aspect-ratio: 16/9;
 }
 
-iframe {
+iframe, video {
   width: 100%;
   height: 100%;
 }
@@ -431,6 +456,12 @@ footer a, footer p {
   height: 100%;
   padding-left: 0;
   justify-content: center;
+
+}
+
+.social-links-container > ul {
+
+  column-gap: 0;
 }
 
 .social-links-terms-container {
@@ -721,13 +752,14 @@ display: none;
     width: 100%;
     order: -1;
     background-color: white;
+    margin-bottom: .5rem;
   }
 
   .puzzles-and-games > article,
   .spotlight > article {
     display: flex;
     flex-direction: column;
-    justify-content: space-between;
+    justify-content: start;
   }
 
   .spotlight {
@@ -740,8 +772,12 @@ display: none;
     grid-auto-flow: row;
   }
 
-  .contributors {
+  .cartoon {
+    grid-template-rows: min-content 1fr;
+
+
   }
+
 
   .contributors > article {
     grid-column: span 6;
@@ -785,6 +821,7 @@ display: none;
   }
 
   .footer-grid-container {
+    padding:1.5rem;
     background-color: black;
     display: grid;
     /* grid-template-columns: repeat(12, 1fr);*/
@@ -820,7 +857,7 @@ display: none;
   }
 
   #span-all {
-    grid-column: span 13;
+    grid-column: span 15;
     display: grid;
     grid-template-columns: repeat(4, 1fr);
     grid-template-rows: repeat(2, min-content);
@@ -861,6 +898,7 @@ display: none;
     height: 100%;
     padding-left: 0;
     justify-content: center;
+    align-items: center;
   }
 
   .social-links-container > ul > li {
